tried to fix misses